# yfinance-bigquery

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
tests/: test_adjust.py  test_cli.py  test_client.py  test_intervals.py  test_membership.py  test_renderers.py  test_runs.py  test_schema.py  test_universe_client.py  test_universe_writer.py  test_verify_internal.py  test_verify_membership.py  test_verify_stooq.py  test_version.py  test_writer.py
tests/fixtures/: make_stooq_fixture.py  make_yfinance_fixture.py  stooq_aapl_2024.parquet  yfinance_aapl_1d.parquet
yfinance_bigquery/: __init__.py  adjust.py  cli.py  client.py  intervals.py  runs.py  schema.py  writer.py
yfinance_bigquery/docs/: __init__.py  renderers.py  taxonomy.py
yfinance_bigquery/universe/: client.py  membership.py  writer.py
yfinance_bigquery/verify/: base.py  compare.py  internal.py  membership.py  stooq.py
