[project]
name = "yfinance-bigquery"
version = "0.2.0"
description = "Yahoo Finance OHLCV → BigQuery: multi-interval ingestion + LLM-friendly docs + Stooq verification"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jason Blahovec" }]
requires-python = ">=3.11"
keywords = ["yfinance", "yahoo-finance", "finance", "ohlcv", "bigquery", "data-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "yfinance>=0.2.40,<0.3",
    "pandas>=2.0,<3.0",
    "google-cloud-bigquery>=3.20,<4.0",
    "pyarrow>=15.0,<19.0",
    "db-dtypes>=1.0,<2.0",
    "requests>=2.31",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "build>=1.2.0",
]

[project.scripts]
yfinance-bigquery = "yfinance_bigquery.cli:main"

[project.urls]
Homepage = "https://github.com/blahovec-labs/yfinance-bigquery"
Issues = "https://github.com/blahovec-labs/yfinance-bigquery/issues"
Changelog = "https://github.com/blahovec-labs/yfinance-bigquery/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yfinance_bigquery"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
